fix: loading indicator too big

--- a/launcher-creator-frontend/src/components/loader/SectionLoader.scss
+++ b/launcher-creator-frontend/src/components/loader/SectionLoader.scss
@@ -13,6 +13,7 @@
     display: inline-block;
     vertical-align: middle;
     width: 70%;
+    max-width: 550px;
     background-color: transparent;
     opacity: 0.3;
   }
