--- a/launcher-creator-frontend/src/components/wizard/Wizard.scss
+++ b/launcher-creator-frontend/src/components/wizard/Wizard.scss
@@ -124,5 +124,10 @@
 
   .wizard-step-footer {
     margin-top: 30px;
+
+    .pf-c-button.pf-m-link {
+      margin-left: 20px;
+    }
+
   }
 }
